force-app/main/default/objects/Recommendation/fields/Employee_Title__c.field-meta.xml
<CustomField>
    <fullName>Employee_Title__c</fullName>
    <label>Employee Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>