force-app/main/default/objects/Recommendation/fields/Hired_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Hired_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hired Candidate</label>
    <referenceTo>Hired_Candidate__c</referenceTo>
    <relationshipLabel>Recommendations</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>