force-app/main/default/objects/Recommendation/fields/Involvement_Percent__c.field-meta.xml
<CustomField>
    <fullName>Involvement_Percent__c</fullName>
    <label>Allocation Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>